# farmfastapi

./: .gitattributes  .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md  sobre.md
docs/stylesheets/: extra.css
