[tool.poetry]
name = "site-docs-farm"
version = "0.1.0"
description = ""
authors = ["Hylan Silva <hylansilva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.7.1"
mkdocs-material = "^9.5.18"
mkdocs-glightbox = "^0.3.7"
mkdocs-video = "^1.5.0"
mkdocs-git-authors-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
pillow = "^10.2.0"
cairosvg = "^2.7.1"
mkdocs-with-pdf = "^0.9.3"
mkdocs-exclude = "^1.0.2"
mkdocs-exclude-unused-files = "^1.3.0"
mkdocs-macros-plugin = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
